# easy-asr-server

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  dev.md  main.py  performance_test_plan.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
demo/: README.md  live_asr_demo.py  simple_asr_examples.py
src/easy_asr_server/: __init__.py  api.py  asr_engine.py  cli.py  model_manager.py  server.py  utils.py
src/example/: README.md  manage_hotwords.py  performance_test.py  record_and_recognize.py  send_file.py
src/example/performance_test/: README.md  asr_request.py  run_complete_test.sh  run_performance_test.sh  test_fix.sh  visualize_results.py
tests/: test_api.py  test_asr_engine.py  test_cli.py  test_core.py  test_device.py  test_integration.py  test_model_manager.py  test_server.py  test_utils.py
