[project]
name = "easy-asr-server"
version = "0.2.0"
description = "A simple high-concurrency speech recognition service based on FunASR"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    {name = "Easy ASR Server Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.12",
    "funasr>=1.2.6",
    "httpx>=0.28.1",
    "modelscope>=1.27.0",
    "pytest>=8.4.0",
    "python-multipart>=0.0.20",
    "rich>=14.0.0",
    "sounddevice>=0.5.2",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "typer>=0.16.0",
    "uvicorn>=0.34.3",
]

[project.urls]
"Homepage" = "https://github.com/3rd-Musketeer/easy-asr-server"
"Bug Tracker" = "https://github.com/3rd-Musketeer/easy-asr-server/issues"
"Changelog" = "https://github.com/3rd-Musketeer/easy-asr-server/blob/main/CHANGELOG.md"

[project.scripts]
easy-asr-server = "easy_asr_server.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88
